Fix for old activities with truncated extended values.

--- a/src/app/activity/activity.component.scss
+++ b/src/app/activity/activity.component.scss
@@ -323,7 +323,6 @@
 }
 
 .profile-link.platform.xbox {
-  background-image: url('/assets/images/xbox.png');
 
   &:hover {
     background-color: $xbox-green;
